# ScanServer_NetCore/Services/Interfaces/IFileService.cs
@@ -1,7 +1,5 @@
-﻿using ScanServer_NetCore.Models;
-using System.Collections.Generic;
+﻿using System.Collections.Generic;
 using System.IO;
-using System.Threading.Tasks;
 
 namespace ScanServer_NetCore.Services.Interfaces
 {
@@ -13,31 +11,40 @@ namespace ScanServer_NetCore.Services.Interfaces
         /// <summary>
         /// Merges files together.
         /// </summary>
-        /// <param name="filesToMerge">files to merge together</param>
+        /// <param name="folderName">folder for all thos efiles</param>
         /// <param name="resultFileName">resulting filename</param>
-        /// <returns>successfull or not</returns>
-        bool MergeFiles(List<FilePath> filesToMerge, FilePath resultFileName);
+        /// <param name="filesToMerge">names of files to merge together</param>
+        /// <returns>resultFileName</returns>
+        string MergeFiles(string folderName, string resultFileName, params string[] filesToMerge);
 
         /// <summary>
         /// Delete the given file
         /// </summary>
+        /// <param name="folder"></param>
         /// <param name="fileToDelete"></param>
         /// <returns>successfull or not</returns>
-        bool DeleteFile(FilePath fileToDelete);
+        bool DeleteFile(string folder, string fileToDelete);
 
         /// <summary>
         /// Return all files in the given folder, null if folder doesn't exist.
         /// </summary>
-        /// <param name="Folder"></param>
+        /// <param name="folder"></param>
         /// <returns></returns>
-        Task<List<FilePath>> ReadFilesOfFolderAsync(string folder);
+        List<string> ReadFilesOfFolder(string folder);
 
         /// <summary>
         /// Return stream to the file to read
         /// </summary>
+        /// <param name="folder"></param>
         /// <param name="fileToRead"></param>
         /// <returns></returns>
-        Task<FileStream> ReadFileAsync(FilePath fileToRead);
+        FileStream ReadFile(string folder, string fileToRead);
+
+        /// <summary>
+        /// Return list of folders
+        /// </summary>
+        /// <returns></returns>
+        List<string> ReadFolders();
 
         /// <summary>
         /// Rename file in directory
@@ -46,8 +53,6 @@ namespace ScanServer_NetCore.Services.Interfaces
         /// <param name="oldName"></param>
         /// <param name="newName"></param>
         /// <returns></returns>
-        Task<bool> RenameFileAsync(string directoryOfFile, string oldName, string newName);
-
-
+        string RenameFile(string directoryOfFile, string oldName, string newName);
     }
 }
